# Trw-data-pipeline-for-ai-training

./: Cargo.toml  README.md
processed_output/: processed_awak.json  processed_enlight.json  processed_fumi.json
src/: main.rs
